objects/User.object
<CustomObject>
    <fields>
        <fullName>AVSFQB__DBSync_Id__c</fullName>
        <description>DBSync Username</description>
        <inlineHelpText>DBSync UserName</inlineHelpText>
        <label>DBSync Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__DBSync_Passwd__c</fullName>
        <description>DBSync Login Password</description>
        <inlineHelpText>DBSync Login Password</inlineHelpText>
        <label>DBSync Passwd</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__DBSync_Profile__c</fullName>
        <description>DBSync Profile Name</description>
        <inlineHelpText>DBSync Profile Name</inlineHelpText>
        <label>DBSync Profile</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__QBOE_Connection_Ticket__c</fullName>
        <defaultValue>&apos;V1-253-$n4Jb_vmujjJWx7f8gvS0Q:163331652&apos;</defaultValue>
        <description>QuickBooks Online Connection Ticket for DBSync</description>
        <inlineHelpText>QuickBooks Online Connection Ticket for DBSync</inlineHelpText>
        <label>QBOE Connection Ticket</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__QBOE_DBSync_Server__c</fullName>
        <description>DBSync Server URL</description>
        <inlineHelpText>DBSync Server URL</inlineHelpText>
        <label>DBSync Server URL</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__QB_SalesRep_ID__c</fullName>
        <label>QB SalesRep ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountId__c</fullName>
        <formula>Contact.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_PCV__c</fullName>
        <formula>TEXT( Contact.Account.Platinum_Client_View__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account PCV</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advisor_Admin__c</fullName>
        <label>Advisor Admin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nichole Thompson</fullName>
                </value>
                <value>
                    <fullName>Michael Preseren</fullName>
                </value>
                <value>
                    <fullName>Lynette Solomon</fullName>
                </value>
                <value>
                    <fullName>Chance Truscott</fullName>
                </value>
                <value>
                    <fullName>Lana Holder</fullName>
                </value>
                <value>
                    <fullName>Katie Davis</fullName>
                </value>
                <value>
                    <fullName>Laura Cassani</fullName>
                </value>
                <value>
                    <fullName>Diana Serotta</fullName>
                </value>
                <value>
                    <fullName>Samantha Herndon</fullName>
                </value>
                <value>
                    <fullName>Alizay Harrison</fullName>
                </value>
                <value>
                    <fullName>Sharon Spohr</fullName>
                </value>
                <value>
                    <fullName>Clarissa Otoo</fullName>
                </value>
                <value>
                    <fullName>Rafael Mendoza</fullName>
                </value>
                <value>
                    <fullName>Irene Calvillo</fullName>
                </value>
                <value>
                    <fullName>Jarad Ray</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Average_Monthly_Logins__c</fullName>
        <formula>LoginHistoryCount__c / 6</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Monthly Logins</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calendly_Link__c</fullName>
        <label>Calendly Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Chargent_User__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this box will assign a Chargent license to the user. Unchecking will remove the license.</inlineHelpText>
        <label>Chargent User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Image__c</fullName>
        <label>Client Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Comm_User_Record_Id__c</fullName>
        <description>Record Id of Community User that this User was converted to.</description>
        <label>Comm_User_Record_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_View__c</fullName>
        <label>Community View</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Job_Roles</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Platinum__c</fullName>
        <formula>TEXT(  Contact.Account.Platinum_Sale_Closed_Won__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Platinum</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Audience_View__c</fullName>
        <inlineHelpText>Use this as a supplement or in place of Job Role in cases where a user or a subset of users need their own page variation in communities. The values are not restricted - update as needed.</inlineHelpText>
        <label>Custom Audience View</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DB_Region__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                    <color>#009900</color>
                    <label>NA</label>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                    <color>#3333FF</color>
                    <label>EMEA</label>
                </value>
                <value>
                    <fullName>APAC</fullName>
                    <color>#CC6600</color>
                    <label>APAC</label>
                </value>
                <value>
                    <fullName>LA</fullName>
                    <color>#990000</color>
                    <label>LA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Default_Groove_Team__c</fullName>
        <inlineHelpText>Controls to which Groove team the user will be assigned to by default. If the value of this field matches a team that exists in Groove (case-sensitive), Groove will automatically assign the user to that team in Groove. This happens every 24 hours.</inlineHelpText>
        <label>Default Groove Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Email_Alias_1__c</fullName>
        <inlineHelpText>allows you to specify an alternative email address of the user. Besides the primary email address alias will also be used in order to identify who the owner, organizer or invitees are of tasks/events created by Groove.</inlineHelpText>
        <label>Email Alias 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Email_Alias_2__c</fullName>
        <inlineHelpText>allows you to specify an alternative email address of the user. Besides the primary email address alias will also be used in order to identify who the owner, organizer or invitees are of tasks/events created by Groove.</inlineHelpText>
        <label>Email Alias 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Google_Plus_ID__c</fullName>
        <inlineHelpText>is the G+ ID of the user. This is populated via the Groove Auth Provider Handler at the first time a user logs in via this Auth Provider.</inlineHelpText>
        <label>G+ ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Is_Unresolved_Items_Agent__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Controls whether or not this user can be authorized by other users to managed their unresolved items.

WARNING: enabling this option for a user might expose the content of other users&apos; emails to this user.</inlineHelpText>
        <label>Is Unresolved Items Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__My_Unresolved_Items_Agent__c</fullName>
        <inlineHelpText>Controls who you authorize too handle your Groove Unresolved Items (i.e. deleting or assigning synced emails to related records).

WARNING: This will expose some of your emails to the Unresolved Items Agent.</inlineHelpText>
        <label>My Unresolved Items Agent</label>
        <relationshipName>Unresolved_Items_Clients</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Profile_Id__c</fullName>
        <formula>ProfileId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Mirrors the profile ID of the user. This field is in use by Groove Flow</inlineHelpText>
        <label>Profile Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Savings__c</fullName>
        <formula>IF( LoginHistoryCount__c &lt;= 14, 30 - (LoginHistoryCount__c * 2), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Freeze_Date__c</fullName>
        <description>Keeps track of what day the user was Frozen.</description>
        <inlineHelpText>Enter the date when the user was frozen.</inlineHelpText>
        <label>Freeze Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hire_Date__c</fullName>
        <label>Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <description>Links to user&apos;s image on Bamboo in order to display in Saleforce.</description>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Job_Role__c</fullName>
        <label>Job Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Job_Roles</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LoginHistoryCount__c</fullName>
        <label>LoginHistoryCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_User_Profile_Name__c</fullName>
        <label>Old User Profile Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_User_Record_Id__c</fullName>
        <label>Old User Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Change_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For use with validation.</description>
        <label>Owner Change Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Create_Date__c</fullName>
        <label>Member Since Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Permission_Level__c</fullName>
        <label>Permission Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Staff</fullName>
                    <default>true</default>
                    <label>Staff</label>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_and_Extension__c</fullName>
        <formula>Phone + &apos;   Ext: &apos; +  Extension</formula>
        <label>Phone and Extension</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platinum_Sale_Id__c</fullName>
        <label>Platinum Sale Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platinum_Wordpress_UserId__c</fullName>
        <formula>Contact.Platinum_Wordpress_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Platinum Wordpress UserId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <formula>Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sandbox_User__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If unchecked the user can generally be inactivated in a Sandbox if a license is needed.</inlineHelpText>
        <label>Sandbox User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Groove_Invite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Groove Invite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supervisor__c</fullName>
        <label>Supervisor</label>
        <relationshipName>Supervisors</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Team 1</fullName>
                </value>
                <value>
                    <fullName>Team 3</fullName>
                </value>
                <value>
                    <fullName>Team 5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tmp_Dataload__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use to trigger a data load when needed.</description>
        <label>Tmp - Dataload</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UpdateLoginCount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UpdateLoginCount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Update_PlatinumSaleId__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update PlatinumSaleId</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Record__c</fullName>
        <formula>HYPERLINK(
LEFT($Api.Partner_Server_URL_260, FIND( &apos;.my&apos;, $Api.Partner_Server_URL_260)) + &quot;lightning.force.com/lightning/setup/ManageUsers/page?address=%2F&quot; + Id + &quot;%3Fnoredirect%3D1%26isUserEntityOverride%3D1&quot;, &quot;Link to User Record Details&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Links to the User Record within Salesforce</inlineHelpText>
        <label>User Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>akaCRM_RR__Daily_Cap__c</fullName>
        <inlineHelpText>Maximum number of leads this user can receive each day if the user is enabled for round-robin lead assignment.  Leave blank if no cap applies.</inlineHelpText>
        <label>Daily Cap</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>akaCRM_RR__Lead_Order__c</fullName>
        <inlineHelpText>Specifies the order in the round-robin rotation for this user if enabled for receipt of round-robin leads.</inlineHelpText>
        <label>Lead Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>akaCRM_RR__Receive_Leads__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if this user is to receive leads through the round-robin process.  Only applies to active users.</inlineHelpText>
        <label>Receive Leads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>akaCRM_RR__Shown_on_Lead_Console__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this box is checked, the User will appear on the Round Robin Lead Rotation Console</inlineHelpText>
        <label>Shown on Lead Console</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__API_URL__c</fullName>
        <formula>$Api.Partner_Server_URL_290</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Hide_Copado_feedback__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The visibility of the message asking users to rate &amp; feedback Copado on the AppExchange is controlled here.</inlineHelpText>
        <label>Hide Copado feedback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Show_Copado_Tips__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Copado Tips</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Work_Manager_Panels__c</fullName>
        <description>JSON containing current user panels on the Backlog</description>
        <label>Work Manager Panels</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFMembershipStatus__c</fullName>
        <label>DSProSFMembershipStatus</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFPassword__c</fullName>
        <label>DSProSFPassword</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dsfs__DSProSFUsername__c</fullName>
        <description>DocuSign username</description>
        <label>DSProSFUsername</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dupcheck__dc3DisableDCTriggers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable All Duplicate Check triggers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dupcheck__dc3DisableDuplicateCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Duplicate Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Is_logged_out__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, user has logged and is not available to receive distributions from the Distribution Engine</inlineHelpText>
        <label>Is logged out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Can_View_Not_Assigned_Prospects__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can View Not Assigned Prospects</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Api_Key__c</fullName>
        <label>Pardot Api Key</label>
        <length>100</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Api_Version__c</fullName>
        <label>Pardot Api Version</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_User_Id__c</fullName>
        <label>Pardot User Id</label>
        <length>100</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_User_Key__c</fullName>
        <label>Pardot User Key</label>
        <length>100</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_User_Role__c</fullName>
        <label>Pardot User Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__EncryptedFedExEndUserKey__c</fullName>
        <label>Encrypted FedEx End User Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__EncryptedFedExEndUserPassword__c</fullName>
        <label>Encrypted FedEx End User Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__FedExEndUserKey__c</fullName>
        <description>The FedEx End User Key obtained from ZenKraft Shipmate</description>
        <inlineHelpText>The FedEx End User Key obtained from ZenKraft Shipmate</inlineHelpText>
        <label>FedEx End User Key</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__FedExEndUserPassword__c</fullName>
        <description>The FedEx End User Password obtained from ZenKraft Shipmate</description>
        <inlineHelpText>The FedEx End User Password obtained from ZenKraft Shipmate</inlineHelpText>
        <label>FedEx End User Password</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__FedExRegisteredPreference__c</fullName>
        <description>Preference Number of the Shipmate Preference record that contains the FedEx Account Number that this user is registered to use.</description>
        <inlineHelpText>Preference Number of the Shipmate Preference record that contains the FedEx Account Number that this user is registered to use.</inlineHelpText>
        <label>FedEx Registered Preference</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkfedex__UserCredentialsEncrypted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Credentials Encrypted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__EncryptedFedExEndUserKey__c</fullName>
        <label>Encrypted FedEx End User Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__EncryptedFedExEndUserPassword__c</fullName>
        <label>Encrypted FedEx End User Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__FedExEndUserKey__c</fullName>
        <label>FedEx End User Key</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__FedExEndUserPassword__c</fullName>
        <label>FedEx End User Password</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__FedExRegisteredPreference__c</fullName>
        <label>FedEx Registered Preference</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Registered_Preference__c</fullName>
        <label>Registered Preference</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__UserCredentialsEncrypted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Credentials Encrypted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkups__PrinterName__c</fullName>
        <label>UPS Printer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkups__UPSRegisteredPreference__c</fullName>
        <label>UPS Registered Preference</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__shippingPreferenceUsed__c</fullName>
        <label>Shipping Preference Used</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ABA_Training_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <columns>Job_Role__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_BY_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>startsWith</operation>
            <value>Training</value>
        </filters>
        <label>ABA - Training Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATED_BY_NAME</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <columns>CORE.USERS.TITLE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>Anderson_Employees_Active</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <columns>Job_Role__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_BY_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>S,P</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>contains</operation>
            <value>andersonadvisors.com</value>
        </filters>
        <label>Anderson Employees - All Active</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Inactive_Anderson_Employees</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <columns>Job_Role__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>S,P</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>contains</operation>
            <value>andersonadvisors.com</value>
        </filters>
        <label>Inactive Anderson Employees</label>
        <language>en_US</language>
        <sharedTo>
            <role>System_Admin</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>akaCRM_RR__Active_Users_Lead_Console_Assignment</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>akaCRM_RR__Shown_on_Lead_Console__c</columns>
        <columns>akaCRM_RR__Receive_Leads__c</columns>
        <columns>akaCRM_RR__Daily_Cap__c</columns>
        <columns>akaCRM_RR__Lead_Order__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>S</value>
        </filters>
        <label>Active Users - Lead Console Assignment</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Deactivate_Processing_User</fullName>
        <active>true</active>
        <description>Throws an error when trying to deactivate a processing user from a non-System admin account.</description>
        <errorConditionFormula>AND(
ISCHANGED( IsActive ),
IsActive = FALSE,
OR(TODAY() &lt; Freeze_Date__c + 10,
ISBLANK( Freeze_Date__c)),
Profile.Name = &quot;Processing&quot;)</errorConditionFormula>
        <errorMessage>Please freeze Processing users for 10 days before deactivating. Enter the date you froze the user in the &quot;Freeze Date&quot; field near the bottom of this page. 10 Days from that date this error will stop.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Hire_Date</fullName>
        <active>false</active>
        <description>Requires the hire date to be filled out if Username denotes Anderson employee.</description>
        <errorConditionFormula>IF(AND(
CONTAINS(Username,&quot;@andersonadvisors.com&quot;),
 ISBLANK(Hire_Date__c) 
), TRUE, FALSE)</errorConditionFormula>
        <errorDisplayField>Hire_Date__c</errorDisplayField>
        <errorMessage>Please fill out the hire date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Not_Allowed_to_Turn_Platinum_Back_On</fullName>
        <active>true</active>
        <description>Prevents employees from activating old Platinum user accounts.</description>
        <errorConditionFormula>AND(
ISCHANGED( IsActive ),
 IsActive = TRUE,
 Profile.Name = &quot;Partner Community User&quot;
)</errorConditionFormula>
        <errorMessage>This user record in Salesforce is no longer associated with the Platinum Portal. Please use the Lightning Components on the Contact page to provide Platinum Portal assistance to clients.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Title</fullName>
        <active>false</active>
        <description>Requires title if Username denotes Anderson employee.</description>
        <errorConditionFormula>IF(AND(
CONTAINS(Username,&quot;@andersonadvisors.com&quot;),
ISBLANK( Title )
), TRUE, FALSE)</errorConditionFormula>
        <errorDisplayField>Title</errorDisplayField>
        <errorMessage>Please fill out the Employee&apos;s title.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>akaCRM_RR__Require_Lead_Order_If_Enabled_for_Leads</fullName>
        <active>true</active>
        <errorConditionFormula>and (
    akaCRM_RR__Receive_Leads__c ,
     IsActive, 
    OR(ISBLANK( akaCRM_RR__Lead_Order__c ), akaCRM_RR__Lead_Order__c=0) 
)</errorConditionFormula>
        <errorDisplayField>akaCRM_RR__Lead_Order__c</errorDisplayField>
        <errorMessage>You must specify the order this user is in the lead assignment rotation if they are active and enabled for Leads through the Round Robin process</errorMessage>
    </validationRules>
</CustomObject>